--- a/base/deployment.yml
+++ b/base/deployment.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: goapp
-        image: rafimojabi/tools:latest
+        image: lnahuel/tools:latest
         ports:
         - containerPort: 8080
         
